[package]
name = "actix-relay"
version = "0.1.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]

[dependencies]
actix = "0.7.4"
actix-broker = { path = "/home/chris/code/actix-broker" }#"0.1.4"
futures = "0.1.24"
serde = "1.0.79"
serde_derive = "1.0.79"
bincode = "1.0.1"
bytes = "0.4.10"

[dev-dependencies]
tokio = "0.1.8"
